{
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "c8686de2-5eac-45c4-9024-c49c8d13c607",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f0a5c264-53ac-4fb8-9da6-4f19f6ff6ca7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "130af560-2afc-499f-a98d-cbead3e703e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0020b6d7-fb1c-4e24-8ec6-d68edae5f07c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a80abddf-ab38-4e06-bf13-95c644e2a7f8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4a0d510c-c10d-490d-9e0d-6a5abe1f91ba",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "522978fa-4218-4d8b-8474-8804feca4863",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "58f6b4cb-ce2d-4040-879c-b116f173da8b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3dd8a5bd-6c35-4cd6-a67c-d927542e85b2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "66852462-71e3-4479-9863-0917ef9594a7",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "610c321f-d4bf-4ce2-ac3f-e50cb107c70e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db662fda-db6e-44ab-a762-a9c59de152d3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogues",
            "id": "1f168edf-f1be-416f-86e3-6b1250dbee4e",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "4dd2744d-c8b8-4a02-af4d-53695eab1d90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8bb0e2bb-91d6-48b4-8c9b-456cf68b1d23",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HookingQTE",
            "id": "e604636b-3d0e-4776-9d75-9f476ea63008",
            "actions": [
                {
                    "name": "AnyKeyReader",
                    "type": "Button",
                    "id": "b42af47a-69dc-4c93-9971-bf3e1dee875d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed585ce7-4dec-48aa-aacd-4cacb2c144e7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKeyReader",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4806e459-f5d8-40bb-812d-07d2d11bb3e9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKeyReader",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66282c02-49a9-4e40-8613-ea2aa89e3279",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKeyReader",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}